[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/Retro Gaming.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Tutorial/Interactions/Back.png" type="Texture" id=3]
[ext_resource path="res://assets/Tutorial/Config/Bar.png" type="Texture" id=5]
[ext_resource path="res://assets/Tutorial/Config/Box.png" type="Texture" id=6]
[ext_resource path="res://assets/Tutorial/Config/Grabber.png" type="Texture" id=8]
[ext_resource path="res://assets/Tutorial/Config/FullScreenBox.png" type="Texture" id=9]
[ext_resource path="res://assets/Tutorial/Config/Gear.png" type="Texture" id=13]
[ext_resource path="res://assets/Tutorial/Config/FullScreenBoxCheck.png" type="Texture" id=14]
[ext_resource path="res://scripts/Settings.gd" type="Script" id=15]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0.45098 )

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 400, 68 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0.478431, 0.329412, 1 )
border_width_left = 10
border_width_top = 20
border_width_bottom = 20
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0.478431, 0.329412, 1 )
border_width_left = 10
border_width_top = 20
border_width_bottom = 20
border_color = Color( 0.8, 0.8, 0.8, 0 )

[node name="Settings" type="Node2D"]
script = ExtResource( 15 )

[node name="Darkener" type="Panel" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
custom_styles/panel = SubResource( 7 )

[node name="Box" type="Sprite" parent="."]
position = Vector2( 640, 368 )
texture = ExtResource( 6 )

[node name="Title" type="Label" parent="."]
margin_left = 383.0
margin_top = 102.0
margin_right = 986.0
margin_bottom = 184.0
custom_fonts/font = SubResource( 1 )
text = "Configurações"
align = 1

[node name="Gear" type="Sprite" parent="."]
position = Vector2( 335, 144 )
texture = ExtResource( 13 )

[node name="FullScreenButton" type="TextureButton" parent="."]
margin_left = 478.0
margin_top = 438.0
margin_right = 536.0
margin_bottom = 496.0
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 14 )

[node name="Volume" type="Label" parent="."]
margin_left = 575.0
margin_top = 226.0
margin_right = 702.0
margin_bottom = 307.0
custom_fonts/font = SubResource( 2 )
text = "Volume
"

[node name="Fullscreen" type="Label" parent="."]
margin_left = 554.0
margin_top = 447.0
margin_right = 748.0
margin_bottom = 486.0
custom_fonts/font = SubResource( 3 )
text = "Tela cheia"

[node name="Return" type="Button" parent="."]
margin_left = 190.0
margin_top = 618.0
margin_right = 232.0
margin_bottom = 657.0
icon = ExtResource( 3 )
flat = true

[node name="VolumeSlider" type="HSlider" parent="."]
margin_left = 447.0
margin_top = 287.0
margin_right = 847.0
margin_bottom = 355.0
custom_icons/tick = ExtResource( 8 )
custom_icons/grabber_disabled = ExtResource( 8 )
custom_icons/grabber_highlight = ExtResource( 8 )
custom_icons/grabber = ExtResource( 8 )
custom_styles/slider = SubResource( 4 )
custom_styles/grabber_area_highlight = SubResource( 5 )
custom_styles/grabber_area = SubResource( 6 )
min_value = -65.0
max_value = 5.0
value = -40.0

[connection signal="toggled" from="FullScreenButton" to="." method="_on_FullScreenButton_toggled"]
[connection signal="pressed" from="Return" to="." method="_on_Return_pressed"]
[connection signal="value_changed" from="VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
